2002-10-19  Ladislav Hagara <hgr@vabo.cz>

		Added TRIGGERS file - bug 680

2002-10-17  Ladislav Hagara <hgr@vabo.cz>

		Updated to 3.5p1

2002-10-16  Ladislav Hagara <hgr@vabo.cz>

		Removed MD5[1]
		Reformatted HISTORY file according to Grimoire Gurus Handbook
		Added create_account function to BUILD

2002-10-03  Ladislav Hagara <hgr@vabo.cz>

		Fixed up MD5

2002-08-19  Adam Clark <adamsgl@dhbit.ca>

		Fixed up URLs & MD5s

2002-06-26  Adam Clark <adamsgl@dhbit.ca>

		Updated to 3.4p1 - fixes recent security issues

2002-06-25  Adam Clark <adamsgl@dhbit.ca>

		Updated to 3.3p1 + added tiny security update script

2002-05-23  Adam Clark <adamsgl@dhbit.ca>

		Updated to 3.2.3p1

2002-05-18  Adam Clark <adamsgl@dhbit.ca>

		Updated to 3.2.2p1
		Fixed spell to use PAM if admin so wishes

2002-03-20  Luis M. Lourenco <aeron@netcabo.pt>

		CONFLICTS: Added.
        
        * BUILD: Added --mandir argument to pass to configure.