@@ -7,7 +7,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
           MD5[0]=5c0733e8150aa1d86d92a950dde901a9
         WEB_SITE=http://www.openssh.org
          ENTERED=20010922
-         UPDATED=20021019
+         UPDATED=20021129
       MAINTAINER=hgr@vabo.cz
       LICENSE[0]=http://www.openbsd.org/cgi-bin/cvsweb/src/usr.bin/ssh/LICENCE?rev=HEAD
            SHORT="openssh is a client and server for encrypted remote logins and file transfers."
