@@ -1,1 +1,2 @@
-on_cast  zlib  cast_self
+on_cast  zlib     cast_self
+on_cast  openssl  cast_self
