@@ -1,2 +1,0 @@
-rm  -f  $BOOST_LOCK
-if  spell_installed  openssh;  then  cast  openssh;  fi
