@@ -1,3 +1,8 @@
+2002-11-29  Ladislav Hagara <hgr@vabo.cz>
+
+		Removed POST_INSTALL
+		Corrected openssh spell
+
 2002-10-16  Ladislav Hagara <hgr@vabo.cz>
 
 		Removed nonfunctional mirror - bug 1337
