@@ -1,3 +1,9 @@
+2002-11-29  Ladislav Hagara <hgr@vabo.cz>
+
+		Removed POST_INSTALL from openssl
+		Added "on_cast openssl cast_self" to TRIGGERS
+		Removed security-update.sh - useless already
+
 2002-10-19  Ladislav Hagara <hgr@vabo.cz>
 
 		Added TRIGGERS file - bug 680
